...
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar_layout">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_countries"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:countries="@{viewmodel.countries}"
                android:padding="4dp"
                tools:listitem="@layout/country" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <TextView
            android:id="@+id/text_view_error"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
