...
                    app:layout_constraintTop_toTopOf="parent">

                </com.google.android.gms.maps.MapView>


                <TextView
                    android:id="@+id/text_view_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@{viewmodel.countryName}"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
                    app:layout_constraintBottom_toTopOf="@id/image_view_flag"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/map_view_country"
                    tools:text="Poland" />

                <ImageView
                    android:id="@+id/image_view_flag"
                    android:layout_width="128dp"
                    android:layout_height="96dp"
                    android:layout_margin="16dp"
...
